--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="text">текст текст текст</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update">update</string>
+    <string name="back">back</string>
 </resources>
