--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">Covid-19</string>
     <string name="logo">Заболеваемость COVID-19</string>
     <string name="search">Поиск</string>
     <string name="button">Найти</string>
-    <string name="text">текст текст текст</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update">update</string>
     <string name="back">back</string>
