--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Covid-19</string>
     <string name="logo">Заболеваемость COVID-19</string>
-    <string name="search">Поиск</string>
     <string name="button">Найти</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update">update</string>
@@ -15,4 +14,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="list">List of Countries</string>
+    <string name="covid">Incidence \n" "COVID-19</string>
+    <string name="search">Search...</string>
+    <string name="nodata">Not data</string>
+
 </resources>
